CREATE LOGOUT USER
