# routers/router.go
@@ -1,10 +1,12 @@
 package routers
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 
+	"github.com/CastroEduardo/golang-api-rest/conf"
 	_ "github.com/CastroEduardo/golang-api-rest/docs"
 	"github.com/CastroEduardo/golang-api-rest/middleware/jwt"
 	"github.com/CastroEduardo/golang-api-rest/routers/api"
@@ -21,29 +23,48 @@ import (
 // InitRouter initialize routing information
 func InitRouter() *gin.Engine {
 	r := gin.New()
+	r.Use(CORSMiddleware())
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
 
+	fmt.Println("-- LOADING --")
+
 	r.StaticFS("/export", http.Dir(export.GetExcelFullPath()))
+	//r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
+
 	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
 	r.StaticFS("/qrcode", http.Dir(qrcode.GetQrCodeFullPath()))
 
+	// staticDir := "/upload/images"
+	// r.Handle(staticDir, http.StripPrefix(staticDir, http.FileServer(http.Dir("."+staticDir))))
+
 	r.POST("/auth", api.PostAuth)
 	r.GET("/auth", api.GetAuth)
+	r.POST("/auth/claim-user", api.PostClaimUser)
+	r.POST("/auth/logout", api.Postlogout)
+
+	r.POST("/auth/checkstatustoken", api.PostCheckStatusSession)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	// r.POST("/upload", api.UploadImage)
 
-	apiv1 := r.Group("/api/v1")
+	apiv1 := r.Group(conf.NameUrlApi1)
 	apiv1.Use(jwt.JWT())
 	{
-		apiv1.GET("/articles/:id", v1.GetArticle)
-
+		apiv1.GET(conf.ArticlesParms_GET, v1.GetArticle)
 	}
 
-	apiv2 := r.Group("/api/v2")
+	apiv2 := r.Group(conf.NameUrlApi2)
 	apiv2.Use(jwt.JWT())
 	{
-		apiv2.GET("/articles/:id", v2.GetArticle)
+		//src := upload.GetImageFullPath()
+		//apiv1.Static("/upload/images", src)
+		//apiv2.StaticFS("/test/", http.Dir(src))
+		src := upload.GetImageFullPath()
+		fmt.Println(src)
+		apiv2.StaticFS("/upload/images", http.Dir(src))
+		//apiv2.Static("/upload/images", "/Users/ecastro_mbp/Desktop/golang_restapi/upload/images/")
+		apiv2.GET(conf.ArticlesParms_GET, v2.GetArticle)
 
 	}
 	// 	//获取标签列表
@@ -82,4 +103,21 @@ func InitRouter() *gin.Engine {
 	// }
 
 	return r
+}
+
+func CORSMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+
+		c.Header("Access-Control-Allow-Origin", "*")
+		c.Header("Access-Control-Allow-Credentials", "true")
+		c.Header("Access-Control-Allow-Headers", "Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization, accept, origin, Cache-Control, X-Requested-With")
+		c.Header("Access-Control-Allow-Methods", "POST,HEAD,PATCH, OPTIONS, GET, PUT")
+
+		if c.Request.Method == "OPTIONS" {
+			c.AbortWithStatus(204)
+			return
+		}
+
+		c.Next()
+	}
 }
